// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreationView module renders as expected with discovered data 1`] = `
<div
  class="creation-view showEditor"
>
  <div
    class="creation-view-split-container showEditor"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:unset;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1000px"
      >
        <div
          class="creation-view-controls-container"
        >
          <div
            class="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            class="creation-view-controls"
          >
            <div
              class="creation-view-controls-textbox"
            >
              <div
                class="creation-view-controls-textbox-title"
              >
                Name
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <input
                aria-invalid="false"
                aria-label="name"
                class="pf-c-form-control"
                id="name"
                required=""
                type="text"
                value="policy-grc"
              />
            </div>
            <div
              class="creation-view-controls-singleselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Namespace
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeahead-1"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-0-select-typeahead"
                      placeholder="The namespace to create and store the policy on the hub cluster."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="namespace"
                    aria-labelledby=" pf-select-toggle-id-0"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-0"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Specifications
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-1"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-1-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for template to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="specs"
                    aria-labelledby=" pf-select-toggle-id-1"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-1"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Cluster selector
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-2"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-2-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for cluster label to select. If not selected, all clusters will be applied."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="clusters"
                    aria-labelledby=" pf-select-toggle-id-2"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-2"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Standards
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-3"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-3-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="standards"
                    aria-labelledby=" pf-select-toggle-id-3"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-3"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Categories
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-4"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-4-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="categories"
                    aria-labelledby=" pf-select-toggle-id-4"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-4"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Controls
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-5"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-5-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="controls"
                    aria-labelledby=" pf-select-toggle-id-5"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-5"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-radiobutton"
            >
              <div
                class="creation-view-controls-textbox-title"
              >
                Remediation
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-radio"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-1"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe="true"
                  id="remediation-inform"
                  name="remediation-inform"
                  type="radio"
                  value="inform"
                />
                <label
                  class="pf-c-radio__label"
                  for="remediation-inform"
                >
                  Inform - Reports the violation, which requires manual remediation.
                </label>
              </div>
              <div
                class="pf-c-radio"
              >
                <input
                  aria-invalid="false"
                  class="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-2"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe="true"
                  id="remediation-enforce"
                  name="remediation-enforce"
                  type="radio"
                  value="enforce"
                />
                <label
                  class="pf-c-radio__label"
                  for="remediation-enforce"
                >
                  Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                </label>
              </div>
            </div>
            <div
              class="creation-view-controls-textbox-title"
            >
              Disable policy
              <div
                content="[object Object]"
                data-testid="mockTooltip"
              >
                <svg
                  aria-hidden="true"
                  fill="#73bcf7"
                  height="1em"
                  role="img"
                  style="vertical-align:-0.125em"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="creation-view-controls-checkbox"
            >
              <div
                class="pf-c-check"
              >
                <input
                  aria-invalid="false"
                  aria-label="disabled"
                  class="pf-c-check__input"
                  id="disabled"
                  type="checkbox"
                />
                <label
                  class="pf-c-check__label"
                  for="disabled"
                >
                  Disabled
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
        role="presentation"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="creation-view-yaml"
        >
          <div
            class="yamlEditorContainer"
            style="display:block;min-height:100px"
          >
            <div
              class="react-monaco-editor-container"
              style="width:100%;height:100%"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders as expected with empty discovered data 1`] = `
<div
  class="creation-view showEditor"
>
  <div
    class="creation-view-split-container showEditor"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:unset;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1000px"
      >
        <div
          class="creation-view-controls-container"
        >
          <div
            class="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            class="creation-view-controls"
          >
            <div
              class="creation-view-controls-textbox"
            >
              <div
                class="creation-view-controls-textbox-title"
              >
                Name
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <input
                aria-invalid="false"
                aria-label="name"
                class="pf-c-form-control"
                id="name"
                required=""
                type="text"
                value="policy-grc"
              />
            </div>
            <div
              class="creation-view-controls-singleselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Namespace
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeahead-2"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-6-select-typeahead"
                      placeholder="The namespace to create and store the policy on the hub cluster."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="namespace"
                    aria-labelledby=" pf-select-toggle-id-6"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-6"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Specifications
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-6"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-7-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for template to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="specs"
                    aria-labelledby=" pf-select-toggle-id-7"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-7"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Cluster selector
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-7"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-8-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for cluster label to select. If not selected, all clusters will be applied."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="clusters"
                    aria-labelledby=" pf-select-toggle-id-8"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-8"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Standards
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-8"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-9-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="standards"
                    aria-labelledby=" pf-select-toggle-id-9"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-9"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Categories
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-9"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-10-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="categories"
                    aria-labelledby=" pf-select-toggle-id-10"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-10"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                Controls
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-10"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-11-select-multi-typeahead-typeahead"
                      placeholder="Begin typing to search for label to select"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="controls"
                    aria-labelledby=" pf-select-toggle-id-11"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-11"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-radiobutton"
            >
              <div
                class="creation-view-controls-textbox-title"
              >
                Remediation
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-radio"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-3"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe="true"
                  id="remediation-inform"
                  name="remediation-inform"
                  type="radio"
                  value="inform"
                />
                <label
                  class="pf-c-radio__label"
                  for="remediation-inform"
                >
                  Inform - Reports the violation, which requires manual remediation.
                </label>
              </div>
              <div
                class="pf-c-radio"
              >
                <input
                  aria-invalid="false"
                  class="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-4"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe="true"
                  id="remediation-enforce"
                  name="remediation-enforce"
                  type="radio"
                  value="enforce"
                />
                <label
                  class="pf-c-radio__label"
                  for="remediation-enforce"
                >
                  Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                </label>
              </div>
            </div>
            <div
              class="creation-view-controls-textbox-title"
            >
              Disable policy
              <div
                content="[object Object]"
                data-testid="mockTooltip"
              >
                <svg
                  aria-hidden="true"
                  fill="#73bcf7"
                  height="1em"
                  role="img"
                  style="vertical-align:-0.125em"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="creation-view-controls-checkbox"
            >
              <div
                class="pf-c-check"
              >
                <input
                  aria-invalid="false"
                  aria-label="disabled"
                  class="pf-c-check__input"
                  id="disabled"
                  type="checkbox"
                />
                <label
                  class="pf-c-check__label"
                  for="disabled"
                >
                  Disabled
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
        role="presentation"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="creation-view-yaml"
        >
          <div
            class="yamlEditorContainer"
            style="display:block;min-height:100px"
          >
            <div
              class="react-monaco-editor-container"
              style="width:100%;height:100%"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders as expected without discovered data 1`] = `
<div
  class="creation-view showEditor"
>
  <div
    class="creation-view-split-container showEditor"
  >
    <div
      class="SplitPane  vertical "
      style="display:flex;flex:1;height:100%;position:unset;outline:none;overflow:hidden;-moz-user-select:text;-webkit-user-select:text;-ms-user-select:text;user-select:text;flex-direction:row;left:0;right:0"
    >
      <div
        class="Pane vertical Pane1  "
        style="flex:none;position:relative;outline:none;width:1000px"
      >
        <div
          class="creation-view-controls-container"
        >
          <div
            class="creation-view-controls-note"
          >
            All fields marked with an asterisk (*) are mandatory.
          </div>
          <div
            class="creation-view-controls"
          >
            <div
              class="creation-view-controls-textbox"
            >
              <div
                class="creation-view-controls-textbox-title"
              >
                creation.view.policy.name
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
              </div>
              <input
                aria-invalid="false"
                aria-label="name"
                class="pf-c-form-control"
                id="name"
                required=""
                type="text"
                value="policy-grc"
              />
            </div>
            <div
              class="creation-view-controls-singleselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                creation.view.policy.namespace
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeahead-3"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-12-select-typeahead"
                      placeholder="The namespace to create and store the policy on the hub cluster."
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="namespace"
                    aria-labelledby=" pf-select-toggle-id-12"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-12"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                creation.view.policy.specs
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-11"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-13-select-multi-typeahead-typeahead"
                      placeholder="creation.view.policy.select.specs"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="specs"
                    aria-labelledby=" pf-select-toggle-id-13"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-13"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                creation.view.policy.selector
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-12"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-14-select-multi-typeahead-typeahead"
                      placeholder="creation.view.policy.select.selectors"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="clusters"
                    aria-labelledby=" pf-select-toggle-id-14"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-14"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                creation.view.policy.standards
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-13"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-15-select-multi-typeahead-typeahead"
                      placeholder="creation.view.policy.select.standards"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="standards"
                    aria-labelledby=" pf-select-toggle-id-15"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-15"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                creation.view.policy.categories
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-14"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-16-select-multi-typeahead-typeahead"
                      placeholder="creation.view.policy.select.categories"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="categories"
                    aria-labelledby=" pf-select-toggle-id-16"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-16"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-multiselect"
            >
              <div
                class="creation-view-controls-multiselect-title"
              >
                creation.view.policy.controls
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-select"
                data-ouia-component-id="OUIA-Generated-Select-typeaheadmulti-15"
                data-ouia-component-type="PF4/Select"
                data-ouia-safe="true"
              >
                <div
                  class="pf-c-select__toggle pf-m-typeahead"
                >
                  <div
                    class="pf-c-select__toggle-wrapper"
                  >
                    <input
                      aria-label=""
                      autocomplete="off"
                      class="pf-c-form-control pf-c-select__toggle-typeahead"
                      id="pf-select-toggle-id-17-select-multi-typeahead-typeahead"
                      placeholder="creation.view.policy.select.controls"
                      type="text"
                      value=""
                    />
                  </div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="listbox"
                    aria-label="controls"
                    aria-labelledby=" pf-select-toggle-id-17"
                    class="pf-c-button pf-c-select__toggle-button pf-m-plain"
                    id="pf-select-toggle-id-17"
                    tabindex="-1"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="pf-c-select__toggle-arrow"
                      fill="currentColor"
                      height="1em"
                      role="img"
                      style="vertical-align:-0.125em"
                      viewBox="0 0 320 512"
                      width="1em"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
            </div>
            <div
              class="creation-view-controls-radiobutton"
            >
              <div
                class="creation-view-controls-textbox-title"
              >
                creation.view.policy.remediation
                <div
                  class="creation-view-controls-must-exist"
                >
                  *
                </div>
                <div
                  content="[object Object]"
                  data-testid="mockTooltip"
                >
                  <svg
                    aria-hidden="true"
                    fill="#73bcf7"
                    height="1em"
                    role="img"
                    style="vertical-align:-0.125em"
                    viewBox="0 0 512 512"
                    width="1em"
                  >
                    <path
                      d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="pf-c-radio"
              >
                <input
                  aria-invalid="false"
                  checked=""
                  class="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-5"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe="true"
                  id="remediation-inform"
                  name="remediation-inform"
                  type="radio"
                  value="inform"
                />
                <label
                  class="pf-c-radio__label"
                  for="remediation-inform"
                >
                  Inform - Reports the violation, which requires manual remediation.
                </label>
              </div>
              <div
                class="pf-c-radio"
              >
                <input
                  aria-invalid="false"
                  class="pf-c-radio__input"
                  data-ouia-component-id="OUIA-Generated-Radio-6"
                  data-ouia-component-type="PF4/Radio"
                  data-ouia-safe="true"
                  id="remediation-enforce"
                  name="remediation-enforce"
                  type="radio"
                  value="enforce"
                />
                <label
                  class="pf-c-radio__label"
                  for="remediation-enforce"
                >
                  Enforce - Automatically runs remediation action that is defined in the source, if this feature is supported.
                </label>
              </div>
            </div>
            <div
              class="creation-view-controls-textbox-title"
            >
              creation.view.policy.disabled
              <div
                content="[object Object]"
                data-testid="mockTooltip"
              >
                <svg
                  aria-hidden="true"
                  fill="#73bcf7"
                  height="1em"
                  role="img"
                  style="vertical-align:-0.125em"
                  viewBox="0 0 512 512"
                  width="1em"
                >
                  <path
                    d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 110c23.196 0 42 18.804 42 42s-18.804 42-42 42-42-18.804-42-42 18.804-42 42-42zm56 254c0 6.627-5.373 12-12 12h-88c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h12v-64h-12c-6.627 0-12-5.373-12-12v-24c0-6.627 5.373-12 12-12h64c6.627 0 12 5.373 12 12v100h12c6.627 0 12 5.373 12 12v24z"
                  />
                </svg>
              </div>
            </div>
            <div
              class="creation-view-controls-checkbox"
            >
              <div
                class="pf-c-check"
              >
                <input
                  aria-invalid="false"
                  aria-label="disabled"
                  class="pf-c-check__input"
                  id="disabled"
                  type="checkbox"
                />
                <label
                  class="pf-c-check__label"
                  for="disabled"
                >
                  Disabled
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        class="Resizer vertical "
        role="presentation"
      />
      <div
        class="Pane vertical Pane2  "
        style="flex:1;position:relative;outline:none"
      >
        <div
          class="creation-view-yaml"
        >
          <div
            class="yamlEditorContainer"
            style="display:block;min-height:100px"
          >
            <div
              class="react-monaco-editor-container"
              style="width:100%;height:100%"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders with notification on general error 1`] = `
<div
  class="MuiCollapse-container MuiCollapse-hidden"
  style="min-height:0px"
>
  <div
    class="MuiCollapse-wrapper"
  >
    <div
      class="MuiCollapse-wrapperInner"
    >
      <div
        aria-label="Danger Alert"
        class="pf-c-alert pf-m-inline pf-m-danger"
        data-ouia-component-id="OUIA-Generated-Alert-danger-2"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-alert__icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </div>
        <h4
          class="pf-c-alert__title"
        >
          <span
            class="pf-u-screen-reader"
          >
            Danger alert:
          </span>
        </h4>
        <div
          class="pf-c-alert__action"
        >
          <button
            aria-disabled="false"
            aria-label="Close Danger alert: alert: undefined"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-2"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align:-0.125em"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-alert__description"
        >
          An unexpected error occurred. Try again.
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders with notification on permission error 1`] = `
<div
  class="MuiCollapse-container MuiCollapse-hidden"
  style="min-height:0px"
>
  <div
    class="MuiCollapse-wrapper"
  >
    <div
      class="MuiCollapse-wrapperInner"
    >
      <div
        aria-label="Danger Alert"
        class="pf-c-alert pf-m-inline pf-m-danger"
        data-ouia-component-id="OUIA-Generated-Alert-danger-1"
        data-ouia-component-type="PF4/Alert"
        data-ouia-safe="true"
      >
        <div
          class="pf-c-alert__icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            role="img"
            style="vertical-align:-0.125em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <path
              d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
            />
          </svg>
        </div>
        <h4
          class="pf-c-alert__title"
        >
          <span
            class="pf-u-screen-reader"
          >
            Danger alert:
          </span>
        </h4>
        <div
          class="pf-c-alert__action"
        >
          <button
            aria-disabled="false"
            aria-label="Close Danger alert: alert: undefined"
            class="pf-c-button pf-m-plain"
            data-ouia-component-id="OUIA-Generated-Button-plain-1"
            data-ouia-component-type="PF4/Button"
            data-ouia-safe="true"
            type="button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              role="img"
              style="vertical-align:-0.125em"
              viewBox="0 0 352 512"
              width="1em"
            >
              <path
                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
              />
            </svg>
          </button>
        </div>
        <div
          class="pf-c-alert__description"
        >
          You do not have permission to create policies in this namespace
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CreationView module renders with spinner when loading 1`] = `
<span
  aria-valuetext="Loading..."
  class="pf-c-spinner pf-m-xl patternfly-spinner"
  role="progressbar"
>
  <span
    class="pf-c-spinner__clipper"
  />
  <span
    class="pf-c-spinner__lead-ball"
  />
  <span
    class="pf-c-spinner__tail-ball"
  />
</span>
`;
